--- a/Content/css/hoitro-style-config.css
+++ b/Content/css/hoitro-style-config.css
@@ -46,7 +46,7 @@ body {
      color: #666666;
      font-size: 14px;
      /* font-family: 'Poppins', sans-serif; */
-     font-family: Arial, Helvetica, sans-serif;
+     font-family: Arial, Helvetica, sans-serif !important;
      line-height: 1.80857;
      font-weight: normal;
 }
@@ -57,7 +57,7 @@ a {
      outline: none !important;
      -webkit-transition: all .3s ease-in-out;
      -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
+/*     -ms-transition: all .3s ease-in-out;*/
      -o-transition: all .3s ease-in-out;
      transition: all .3s ease-in-out;
 }
@@ -153,7 +153,7 @@ a,
      outline: none !important;
      -webkit-transition: all .3s ease-in-out;
      -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
+/*     -ms-transition: all .3s ease-in-out;*/
      -o-transition: all .3s ease-in-out;
      transition: all .3s ease-in-out;
 }
@@ -215,7 +215,6 @@ button {
 
 .full {
      width: 100%;
-     float: left;
      margin: 0;
      padding: 0;
 }
@@ -303,6 +302,7 @@ button {
      height: 86px;
      padding: 15px 0px 15px 0px;
      background: #fff;
+/*     display: flex;*/
 }
 
 
@@ -811,7 +811,7 @@ ul.link_menu li a {
      font-size: 17px;
      line-height: 28px;
      display: block;
-     width: -moz-max-content;
+/*     width: -moz-max-content;*/
 }
 
 ul.link_menu li a:hover {
