--- a/Views/User/PostRoom.cshtml
+++ b/Views/User/PostRoom.cshtml
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-group">
-            
+            <input type="file" name="imgFiles" multiple/>
         </div>
 
         <div class="form-group">
