--- a/Views/User/EditPostRoom.cshtml
+++ b/Views/User/EditPostRoom.cshtml
@@ -24,9 +24,21 @@
     @*jquery slect2*@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+
+    <!-- CSS của Dropzone -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dropzone@5.9.3/dist/min/dropzone.min.css" />
+
+    <!-- JavaScript của Dropzone -->
+    <script src="https://cdn.jsdelivr.net/npm/dropzone@5.9.3/dist/min/dropzone.min.js"></script>
+
+    <!-- Thêm CDN cho SweetAlert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 }
 
-@using (Html.BeginForm("PostRoom", "User", FormMethod.Post, new { @id = "from_dangtin", enctype = "multipart/form-data" }))
+
+}
+
+@using (Html.BeginForm("EditPostRoom", "User", FormMethod.Post, new { @id = "from_dangtin", enctype = "multipart/form-data" }))
 {
     <input type="submit" value="Test submit" />
     @Html.AntiForgeryToken()
@@ -94,9 +106,11 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="post_title" class="col-md-12 control-label">Tiêu đề</label>
+                @*<label for="post_title" class="col-md-12 control-label">Tiêu đề</label>*@
+                @Html.LabelFor(model => model.tieu_de, "Tiêu đề", new { @class = "col-md-12 control-label" })
                 <div class="col-md-12">
-                    <input type="text" class="form-control js-title" name="tieu_de" id="post_title" value="" minlength="30" maxlength="120" data-msg-required="Tiêu đề không được để trống" data-msg-minlength="Tiêu đề quá ngắn" data-msg-maxlength="Tiêu đề quá dài">
+                    @Html.TextBoxFor(model => model.tieu_de, new { @class = "form-control" })
+                    @*<input type="text" class="form-control js-title" name="tieu_de" id="post_title" value="" minlength="30" maxlength="120" data-msg-required="Tiêu đề không được để trống" data-msg-minlength="Tiêu đề quá ngắn" data-msg-maxlength="Tiêu đề quá dài">*@
                     <input type="hidden" name="tieu_de_meta" meta-content />
                 </div>
             </div>
@@ -166,9 +180,27 @@
                 <div class="col-md-12">
                     <p>Cập nhật hình ảnh rõ ràng sẽ cho thuê nhanh hơn</p>
 
-                    <input type="file" id="photos-dropzone" name="photos-dropzone" multiple accept=".jpg,.jpeg,.png" />
+                    <div class="js-dropzone" style="width: 100%; height: 300px; border: 2px solid #333"></div>
+                    <div class="list_photos row dropzone-previews" id="list-photos-dropzone-previews">
+                        @{
+                            if (ViewBag.RoomImgs != null)
+                            {
+                                foreach (RoomImg img in ViewBag.RoomImgs)
+                                {
+                                    <div class="photo_item col-md-2 col-3 js-photo-manual">
+                                        <div class="photo"><img src="@img.folder@img.fileName" alt="@img.fileName" data-dz-thumbnail=""></div>
+                                        <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress=""></span></div>
+                                        <div class="bottom clearfix">
+                                            <span class="photo_name" data-dz-name=""></span>
+                                            <span class="photo_delete" data-dz-remove=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg> Xóa</span>
+                                        </div>
+                                        <input type="hidden" class="js-not-temp" name="file_name_list" value="@img.fileName" />
+                                    </div>
+                                }
+                            }
+                        }
+                    </div>
 
-                    <div class="list_photos row dropzone-previews" id="list-photos-dropzone-previews"></div>
                     <div id="tpl" style="display:none">
                         <div class="photo_item col-md-2 col-3 js-photo-manual">
                             <div class="photo"><img data-dz-thumbnail=""></div>
@@ -177,7 +209,7 @@
                                 <span class="photo_name" data-dz-name=""></span>
                                 <span class="photo_delete" data-dz-remove=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg> Xóa</span>
                             </div>
-                            <input name="" value="" type="hidden">
+                            <!-- <input name="" value="" type="hidden"> -->
                         </div>
                     </div>
                 </div>
@@ -213,8 +245,10 @@
 
 @section footer
 {
-    <script src="~/Scripts/js/manage-main.js"></script>
-    <script src="~/Scripts/js/tinh-thanh.js"></script>
+    @*<script src="~/Scripts/js/manage-main.js"></script>*@
+    @*<script src="~/Scripts/js/tinh-thanh.js"></script>*@
+    <script src="~/Scripts/js/my-js/hoitro.post.js"></script>
+
     @*<script>
             const listPhotoPreview = document.getElementById('list-photos-dropzone-previews');
             const imgFilesDrop = document.getElementById('img-files-drop');
